Изменил package проекта

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_fight_club">
+    package="ru.skillbranch.flutter_fight_club">
    <application
         android:label="flutter_fight_club"
         android:name="${applicationName}"
