--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "ru.skillbranch" "\0"
             VALUE "FileDescription", "flutter_fight_club" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "flutter_fight_club" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2022 ru.skillbranch. All rights reserved." "\0"
             VALUE "OriginalFilename", "flutter_fight_club.exe" "\0"
             VALUE "ProductName", "flutter_fight_club" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
