--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,4 @@ linux/flutter/generated_plugin_registrant.cc
 linux/flutter/generated_plugin_registrant.h
 linux/flutter/generated_plugins.cmake
 macos/Flutter/GeneratedPluginRegistrant.swift
+*.bak
